# olymp_schools

./: 1.cpp  6.cpp  CMakeLists.txt  README.md  bigint.cpp
GOPSTOP/: TL.cpp
INNOPOLIS AUTUMN/DAY 1 DA или NE?/B/: B.cpp
INNOPOLIS AUTUMN/DAY 1 DA или NE?/C/: C.cpp
INNOPOLIS AUTUMN/DAY 1 DA или NE?/D/: D.cpp
INNOPOLIS AUTUMN/DAY 1 DA или NE?/E/: E.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/A/: A.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/B/: B.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/C/: C.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/D/: D.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/E/: E.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/F/: F.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/G/: G.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/H/: H.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/I/: I.cpp
INNOPOLIS AUTUMN/DAY 2 Деревянный/J/: J.cpp
INNOPOLIS AUTUMN/DAY 3 Джон и его друзья/A/: A.cpp
INNOPOLIS AUTUMN/DAY 3 Джон и его друзья/B/: B.cpp
INNOPOLIS AUTUMN/DAY 3 Джон и его друзья/C/: C.cpp
INNOPOLIS AUTUMN/DAY 3 Джон и его друзья/E/: E.cpp
INNOPOLIS AUTUMN/DAY 4 Хороший контест/A/: A.cpp
INNOPOLIS AUTUMN/DAY 4 Хороший контест/B/: B.cpp
INNOPOLIS AUTUMN/DAY 4 Хороший контест/C/: C.cpp
INNOPOLIS AUTUMN/DAY 4 Хороший контест/D/: D.cpp
INNOPOLIS AUTUMN/DAY 4 Хороший контест/F/: F NECKLACE.cpp
INNOPOLIS AUTUMN/DAY 5 Своя поисковая система/A/: main.cpp
INNOPOLIS AUTUMN/DAY 5 Своя поисковая система/B/: main.cpp
INNOPOLIS AUTUMN/DAY 5 Своя поисковая система/D/: main.cpp
INNOPOLIS DAYS/Занятие. 2017-01-14/A/: main.cpp
INNOPOLIS DAYS/Занятие. 2017-01-14/B/: main.cpp
INNOPOLIS DAYS/Занятие. 2017-01-14/C/: main.cpp
LKSH/: #define fi first-#define se .textClipping  apple.cpp  nitochky.cpp  party troiky.cpp
LKSH B/: main 2.cpp  main.cpp
LKSH B/DAY 3 DD/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
LKSH WINTER AH/DAY1/A/: main.cpp
LKSH WINTER AH/DAY1/B/: main.cpp
LKSH WINTER AH/DAY1/C/: main.cpp
LKSH WINTER AH/DAY1/E/: main.cpp
LKSH WINTER AH/DAY1/F/: main.cpp
LKSH WINTER AH/DAY2/A/: main.cpp
LKSH WINTER AH/DAY2/B/: main.cpp
LKSH WINTER AH/DAY2/C/: main.cpp
LKSH WINTER AH/DAY2/E/: main.cpp
LKSH WINTER AH/DAY3/A/: main.cpp
LKSH WINTER AH/DAY3/B/: main.cpp
LKSH WINTER AH/DAY3/C/: main.cpp
LKSH WINTER AH/DAY3/D/: main.cpp
LKSH WINTER AH/DAY3/E/: main.cpp
LKSH WINTER AH/DAY3/F/: main.cpp
LKSH WINTER AH/DAY3/G/: main.cpp
LKSH WINTER AH/DAY4/A/: main.cpp
LKSH WINTER AH/DAY4/B/: main.cpp
LKSH WINTER AH/DAY4/C/: main.cpp
LKSH WINTER AH/DAY8/A/: main.cpp
LKSH WINTER AH/зачет/A/: main.cpp
LKSH WINTER AH/зачет/B/: main.cpp
LKSH WINTER AH/зачет/D/: main.cpp
LKSH WINTER AH/зачет/E/: main.cpp
LKSH WINTER AH/зачет/H/: main.cpp
LKSH WINTER AH/зачет/I/: main.cpp
LKSH WINTER AH/зачет/J/: main.cpp
LKSH/day 10/: minonpath.cpp  power.cpp
LKSH/day 6/: ravnoprav.cpp  razrezanie grafa.cpp
LKSH/day 7/: cubes.cpp
LKSH/day 8/: permutation.cpp  rmq naoborot.cpp  windows.cpp
LKSH/day 9/: alga.cpp  snowmen.cpp  strike back.cpp
LKSH/day1/: k-i null.cpp  kubiki.cpp  robot in server.cpp  securet set.cpp
LKSH/day2/: minimum cyclik sdvig.cpp  obmen.cpp  snova v kosmos.cpp  substr.cpp
LKSH/day3/: pod-bor.cpp  vasya and ciclik sdvig.cpp  virus ahokoras.cpp
LKSH/day4/: suffmasnloglogn.cpp
LKSH/day5/: aviaperelety.cpp  components rebernoy dvusvyaz.cpp  magnitnye podushky.cpp  razbienie.cpp  traktorist 01bfs.cpp
SHOP 2017 winter/DAY1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
SHOP 2017 winter/DAY3/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp
SHOP 2017 winter/DAY7/: A.cpp
SHOP 2017 winter/ПОТОКИ/: A.cpp
ZKSH/day 0/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
ZKSH/day 1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
ZKSH/day 2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp
ZKSH/day 3/: B.cpp  C.cpp  D.cpp  E.cpp
ZKSH/day 4/: B.cpp  C.cpp
ZKSH/day 5/: B.cpp  C.cpp
ZKSH/day 6/: B.cpp  C.cpp  E.cpp
ZKSH/Парсоч/: A.cpp  B.cpp
dp/: NOVP NxM.cpp  NVP NlogN.cpp  fixedsum.cpp  levinshtein.cpp  psp dp.cpp  psp k.cpp
geometry/: area_triangle.cpp  basic_geom.cpp  check_point_segment.cpp  intersection of segments.cpp  mnogoug-perebor-convexhull.cpp  segment-dist.cpp  tangent.cpp
graph/: LCA.cpp  bfs on special grid.cpp  bfs.cpp  bfs01.cpp  cut-points.cpp  cutpoints.cpp  dfs + bfs on grid.cpp  dfs emaxx.cpp  dfs on grid.cpp  dijkstra_fast.cpp  dijkstra_nlogn.cpp  fast bfs on grid.cpp  find_bridges.cpp  find_comps.cpp  ford_bellman emaxx.cpp  heavy-light decomposition.cpp  top sort emaxx.cpp
math/: BIGINT.cpp  DATE.cpp  binpow.cpp  convexhull.cpp  eratosthenes_sieve.cpp  fft.cpp  point in polygon.cpp  polygon area.cpp  prime.cpp
parse/: calculator.cpp
string/: ANTIHASH.cpp  Hashone.cpp  Hashtwo.cpp  KMP.cpp  netochnoe sovpadenie.cpp  prefix-function.cpp  sufarray.cpp  suffarray nloglogn.cpp  suffix_automaton.cpp  suffmasnloglogn.cpp  virus ahokoras.cpp  z-function.cpp
struct/: oneminbug.cpp  onesum  onesum.cpp  segment-emaxx.cpp  segment-tree-max.cpp  sqrt.cpp  struct dodelai.cpp  yavn.cpp
ДП по профилю/: Шоколадка.cpp
